--- a/style.css
+++ b/style.css
@@ -56,9 +56,24 @@ body {
     font-size: 2em;
     color: #333;
     animation: fade-in 1s ease-in-out;
+    margin-bottom: 7px;
 
 }
 #bolded{
     font-weight: bold;
 }
+
+
+    #Streak {
+        color: purple;
+        padding: 10px;
+        margin: 10px;
+        font-size: 24px;
+        border: solid 4px purple;
+        box-sizing: content-box;
+        width: 30%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
 ;
